added secret links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class='main-container'>
-        <div class='chain-container'>
+        <div class='chains'>
           <img src='img/chain.png' alt='chain'></img>
           <img src='img/chain.png' alt='chain'></img>
         </div>
@@ -43,7 +43,7 @@
             <a href="#">C</a>
           </nav>
         </div>
-        <div class='chain-container'>
+        <div class='chains'>
           <img src='img/chain.png' alt='chain'></img>
           <img src='img/chain.png' alt='chain'></img>
         </div>
