homepage with construction cones

--- a/index.html
+++ b/index.html
@@ -16,32 +16,33 @@
         </div>
         <div class='content-container'>
           <nav class="title">
-            <a href="#">E</a>
-            <a href="#">.</a>
-            <a href="#">L</a>
-            <a href="#">.</a>
-            <a href="#">L</a>
-            <a href="#">.</a>
-            <a href="#">I</a>
-            <a href="#">.</a>
-            <a href="#">E</a>
-            <a href="#">.</a>
-            <a href="#">S</a>
-            <a href="#">.</a>
-            <a href="#">A</a>
-            <a href="#">.</a>
-            <a href="#">M</a>
-            <a href="#">.</a>
-            <a href="#">I</a>
-            <a href="#">.</a>
-            <a href="#">S</a>
-            <a href="#">.</a>
-            <a href="#">A</a>
-            <a href="#">.</a>
-            <a href="#">A</a>
-            <a href="#">.</a>
-            <a href="#">C</a>
+            <p>E</p>
+            <p>.</p>
+            <p>L</p>
+            <p>.</p>
+            <p>L</p>
+            <p>.</p>
+            <p>I</p>
+            <p>.</p>
+            <p>E</p>
+            <p>.</p>
+            <p>S</p>
+            <p>.</p>
+            <p>A</p>
+            <p>.</p>
+            <p>M</p>
+            <p>.</p>
+            <p>I</p>
+            <p>.</p>
+            <p>S</p>
+            <p>.</p>
+            <p>A</p>
+            <p>.</p>
+            <p>A</p>
+            <p>.</p>
+            <p>C</a>
           </nav>
+          <img src='img/opening_soon.jpeg' alt='opening soon'></img>
         </div>
         <div class='chains'>
           <img src='img/chain.png' alt='chain'></img>
